# DREAMS1.0

./: .gitignore  README.md  pyproject.toml  requirements-dnp3.txt  requirements.txt
config/: config.example.yaml
deploy/: dreams-outstation.service
docs/: ITRI_DREAMS_TEST_VALIDATION.md  PV_LOGGER_MQTT_TECH_SPEC.md
src/dreams_outstation/: __main__.py  buffer.py  command_log.py  config.py  dnp3_gateway.py  dreams_api.py  logging_config.py  models.py  mqtt_client.py  points.py  service.py  site_bindings.py  state.py  web_ui.py
tests/: test_buffer.py  test_command_log.py  test_config.py  test_dnp3_gateway.py  test_dnp3_master_ui.py  test_dreams_api.py  test_mqtt_client.py  test_points.py  test_service.py  test_site_bindings.py  test_state.py  test_web_ui.py
tools/: dnp3_master_simulator.py  dnp3_master_ui.py
